2001-03-14  Manuel Guesdon <mguesdon@orange-concept.com>

        * GSWeb.framework/GSWComponent.m: Traces
        * GSWeb.framework/GSWConstants.m/.h: new GSWAssociation special keys: GSLanguage
        * GSWeb.framework/GSWAssociations.m: Handle special keys: GSLanguage, handle EONull
        * GSWeb.framework/GSWBundle.m: traces, fix cached not found path in 
                lockedResourceNamed:ofType:withLanguages:usingCache:relativePath:absolutePath:
        * GSWeb.framework/GSWResourceManager.m: traces, fix bugs poblems in ISO/GS Languages (trim spaces and lowercase
        * GSWeb.framework/GSWeb.h: removed #include <Foundation/NSGArray.h> (thanks Sungjin Chun <ninja@linuxone.co.kr>)
        * GSWExtensions.framework: re-added GSWSessionRestorationErrorPage.gswd
        * INSTALL: minor changes (directory name,...)
        
2001-03-12  Manuel Guesdon <mguesdon@orange-concept.com>

	* GSWeb.framework/GSWTemplateParserXML.m: fix for autoclose tags
	* GSWeb.framework/GSWHTMLStaticElement.m: fix for autoclose tags

2001-03-11  Manuel Guesdon <mguesdon@orange-concept.com>

        * GSWeb.framework/GSWWOCompatibility.h/.m: added
        * GSWeb.framework/GNUmakefile: added GSWWOCompatibility.h/.m
        * GSWeb.framework/GSWApplication.h/m: added WOApplicationMain, handle WO/GSWeb names
        * GSWeb.framework/GSWContext.m: handle WO/GSWeb names, added traces
        * GSWeb.framework/GSWConstants.h/.m: handle WO/GSWeb names
        * GSWeb.framework/GSWDynamicURLString.m: handle WO/GSWeb names
        * GSWeb.framework/GSWProjectBundle.m/.h: handle WO/GSWeb names, suppress warnings
        * GSWeb.framework/GSWSession.m: handle WO/GSWeb names        
        * GSWeb.framework/GSWRequest.m: handle WO/GSWeb names
        * GSWeb.framework/GSWTemplateParser.m: handle WO/GSWeb names, 
                added tag counts to help errors hunt
        * GSWeb.framework/GSWBundle.m: handle WO/GSWeb names, added traces