@@ -4,11 +4,12 @@
  * Terence Parr, MageLang Institute
  * with John Lilley, Empathy Software
  * and Manuel Guesdon, Software Builders
- * ANTLR Version 2.5.0; 1996,1997,1998,1999
+ * ANTLR Version 2.7.1; 1996,1997,1998,1999,2000
  */
 
 
 #include <GSWeb/GSWeb.h>
+
 
 #include "gsantlr/ANTLRCommon.h"
 #include "GSWPageDefParser.h"
