@@ -1,3 +1,12 @@
+2001-08-20  Adam Fedor  <fedor@gnu.org>
+
+	* Update for changes in gsantlr and use of antlr 2.7.1
+	* GSWeb.framework/GSWHTMLLexer.m: Update.
+	* GSWeb.framework/GSWPageDefTokenTypes.txt: Update.
+	* GSWeb.framework/PageDef.g: Update.
+	* GSWeb.framework/htmltag.g: Update.
+	(patch from kim@tinker.com).
+
 2001-03-14  Manuel Guesdon <mguesdon@orange-concept.com>
 
         * GSWeb.framework/GSWComponent.m: Traces
